// juniper.afi_switch is generated by proto_generator as a protobuf
// representation of a YANG schema.
//
// Input schema modules:
//  - afi-cap-action.yang
//  - afi-cap-entry-action.yang
//  - afi-cap-entry-match.yang
//  - afi-cap-entry.yang
//  - afi-cap-match.yang
//  - afi-cap.yang
//  - afi-common.yang
//  - afi-cos-classifier.yang
//  - afi-counter.yang
//  - afi-decap.yang
//  - afi-discard.yang
//  - afi-encap-entry.yang
//  - afi-encap.yang
//  - afi-filter.yang
//  - afi-fwd-sandbox.yang
//  - afi-indexed-list.yang
//  - afi-indirect.yang
//  - afi-list.yang
//  - afi-match.yang
//  - afi-oam.yang
//  - afi-policer.yang
//  - afi-port.yang
//  - afi-receive.yang
//  - afi-replicate.yang
//  - afi-sample.yang
//  - afi-sandbox.yang
//  - afi-selector.yang
//  - afi-switch.yang
//  - afi-table.yang
//  - afi-tree-entry.yang
//  - afi-tree.yang
//  - afi-types.yang
//  - afi.yang
syntax = "proto3";

package juniper.afi_switch;

import "ywrapper/ywrapper.proto";
import "yext/yext.proto";
import "juniper/enums/enums.proto";

message AfiSwitch {
  repeated juniper.enums.AfiSwitchAfiField key_fields = 43023453;
  ywrapper.StringValue name = 531046261;
  juniper.enums.AfiSwitchAfiField switch_field = 185566099;
}

message SwitchCase {
  ywrapper.StringValue name = 375078443;
  ywrapper.StringValue node = 457392418;
  ywrapper.StringValue value = 278619649;
}
